--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "axios": "^0.21.1",
         "core-js": "^3.6.5",
         "element-ui": "^2.15.1",
+        "github-markdown-css": "^4.0.0",
         "vue": "^2.6.11",
         "vue-infinite-scroll": "^2.0.2",
+        "vue-markdown": "^2.2.4",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
     },
@@ -32,7 +34,8 @@
         "less-loader": "^5.0.0",
         "lint-staged": "^9.5.0",
         "prettier": "^2.2.1",
-        "vue-template-compiler": "^2.6.11"
+        "vue-loader": "^15.9.6",
+        "vue-template-compiler": "^2.6.12"
     },
     "eslintConfig": {
         "root": true,
